# GLEXP-Team-KitkitSchool

./: .gitignore  .gitmodules  CODEOWNERS  INSTALL.md  LICENSE  LOCALIZE.md  README.md
blackboard/: gradle.properties
blackboard/app/: build.gradle  proguard-rules.pro
blackboard/gradle/wrapper/: gradle-wrapper.properties
bookviewer/: .gitignore  README.md  readme.txt
bookviewer/Classes/: AppDelegate.cpp  AppDelegate.h  BookPage.hpp  BookView.cpp  BookView.hpp  CCAppController.cpp  CCAppController.hpp  MainScene.cpp  MainScene.h  TodoBook.cpp  TodoBook.hpp
bookviewer/Classes/Managers/: GameSoundManager.cpp  GameSoundManager.h  LanguageManager.cpp  LanguageManager.hpp  LogManager.cpp  LogManager.hpp
bookviewer/Classes/Utils/: TodoUtil.cpp  TodoUtil.h
bookviewer/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
bookviewer/proj.android-studio/: gradle.properties  settings.gradle
bookviewer/proj.android-studio/app/: AndroidManifest.xml  build.gradle
bookviewer/proj.android-studio/downloader_library/: build.gradle
bookviewer/proj.android/jni/: Android.mk
bookviewer/proj.ios_mac/booktest.xcodeproj/: project.pbxproj
bookviewer/proj.ios_mac/ios/: Info.plist
drawing/app/: build.gradle
drum/app/: build.gradle
gallery/: local.properties
gallery/app/: build.gradle
kitkitschoollogger/: gradle.properties  local.properties  settings.gradle
kitkitschoollogger/kitkitlogger/: build.gradle  proguard-rules.pro
launcher/: build.gradle  gradle.properties  local.properties  maqpublisher.keystore
launcher/app/: build.gradle
lockscreen/: local.properties
lockscreen/app/: build.gradle
mainapp/: .gitignore  README
mainapp/Classes/: AppDelegate.cpp  ButtonUtility.cpp  ButtonUtility.hpp  CCAppController.cpp  CCAppController.hpp  CustomDirector.h  DailyData.cpp  DailyData.hpp  SplashScene.cpp  SplashScene.hpp
mainapp/Resources/: readme.txt
mainapp/cocos2d/: readme.txt
mainapp/proj.android/: .cproject  .project  AndroidManifest.xml  ant.properties  build-cfg.json  build.xml  todoschool.keystore
mainapp/proj.android-studio/: .gitignore  build-cfg.json  build.gradle  debug.keystore  gradle.properties  settings.gradle
mainpp/: README.md
mainpp/Classes/: CCAppController.cpp  CCAppController.hpp
mainpp/proj.android/: .cproject  .project  build.xml
mainpp/proj.android-studio/: settings.gradle
marimba/app/: build.gradle
seaworld/Classes/: AppDelegate.cpp  DecoTestScene.cpp  DecoTestScene.hpp  MainScene.cpp  MainScene.hpp
seaworld/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
seaworld/proj.android-studio/: gradle.properties  settings.gradle
voice-engine-a/: LICENSE.md  README  README.md  build.gradle
voice-engine-a/app/: CMakeLists.txt  build.gradle  proguard-rules.pro
voice-engine-a/app/libs/aosp-monkey-patch/: CMakeLists.txt  README.md
voice-engine-a/app/libs/aosp-monkey-patch/cutils/: jstring.h  log.h
voice-engine-a/app/libs/aosp-monkey-patch/utils/: Log.h  String16.h
voice-engine-a/app/libs/libexpat/expat/: CMakeLists.txt
voice-engine-a/app/libs/libnativehelper/: CMakeLists.txt  JNIHelp.cpp  JniConstants.cpp
voice-engine-a/app/libs/svoxpico/: Android.mk  CMakeLists.txt  picoapi.h
voice-engine-a/app/libs/ttscompat/: CMakeLists.txt
voice-engine-a/app/libs/ttscompat/jni/: Android.mk  NOTICE  com_android_tts_compat_SynthProxy.cpp  tts.h
voice-engine-a/app/libs/ttscompat/src/com/android/tts/compat/: CompatTtsService.java
voice-engine-a/app/libs/ttspico/: Android.mk  CMakeLists.txt  com_svox_picottsengine.cpp  svox_ssml_parser.h
voice-engine-a/app/src/main/: AndroidManifest.xml
voice-engine-a/app/src/main/cpp/: native-lib.cpp
voice-engine-a/app/src/main/java/com/enuma/voice_engine_a/: CheckVoiceData.java  DefaultActivity.java  GeneralSettingsFragment.java  VoiceEngineSettings.java  VoiceEngineTtsService.java
voice-engine-a/app/src/main/java/com/enuma/voice_engine_a/core/: CompatTtsService.java  SynthProxy.java
voice-engine-a/app/src/main/java/com/enuma/voice_engine_a/installer/: InstallerActivity.java
voice-engine-a/app/src/main/res/layout/: success.xml
voice-engine-a/app/src/main/res/values/: strings.xml
voice-engine-a/app/src/main/res/xml/: preferences_headers.xml  tts_engine.xml
writingboard/: gradle.properties  settings.gradle
writingboard/app/: build.gradle
(+2038 files in other folders)
